--- a/style.css
+++ b/style.css
@@ -62,6 +62,76 @@ nav .nav-link {
     width: 100%;
     object-fit: cover;
 }
+.features-section {
+    background-color: #0D4775;
+    color: #fff;
+    padding: 2rem 1rem;
+}
+
+.section-title {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+/* Container responsivo */
+.features-container {
+    box-shadow: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.features-title {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.features-list {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 1.5rem;
+}
+
+.features-list li {
+    border-bottom: 1px solid #fff;
+    padding: 0.5rem 0;
+    font-size: 1rem;
+    font-family: 'Arial', sans-serif;
+}
+
+/* Botão personalizado */
+.btn-start {
+    background-color: #fff;
+    color: #0D4775;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.5rem 1.5rem;
+    border: 2px solid #fff;
+    text-decoration: none;
+}
+
+.btn-start:hover {
+    background-color: #0D4775;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+/* Imagem */
+.features-image {
+    flex: 1;
+    max-width: 500px;
+    text-align: center;
+}
+
+.features-image img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
 
 @media (max-width: 350px) {
     .text-container h1 {
@@ -116,6 +186,19 @@ nav .nav-link {
 
     .text-container p {
         font-size: 1.15rem;
+    }
+    
+
+    .features-title {
+        font-size: 1.25rem;
+    }
+
+    .features-list li {
+        font-size: 0.9rem;
+    }
+
+    .btn-start {
+        font-size: 0.9rem;
     }
 }
 
